[gd_scene load_steps=9 format=3 uid="uid://cpe255vmwoiwc"]

[ext_resource type="Script" uid="uid://bty324xf5sovf" path="res://menu_localizations.gd" id="1_tukkb"]
[ext_resource type="Script" uid="uid://cujpcppvj015h" path="res://scripts/localization_info.gd" id="2_nh7wy"]
[ext_resource type="Texture2D" uid="uid://dbpd1qitj8nym" path="res://img/garaje.png" id="3_g6vhk"]
[ext_resource type="Texture2D" uid="uid://bni44dak6jpej" path="res://imagenes/escenario1.jpg" id="4_u1bmi"]
[ext_resource type="Texture2D" uid="uid://bi6olowmhuxeg" path="res://imagenes/escenario2.jpg" id="5_3qfoq"]

[sub_resource type="Resource" id="Resource_qbd1p"]
script = ExtResource("2_nh7wy")
img = ExtResource("3_g6vhk")
metadata/_custom_type_script = "uid://cujpcppvj015h"

[sub_resource type="Resource" id="Resource_cht4p"]
script = ExtResource("2_nh7wy")
img = ExtResource("4_u1bmi")
metadata/_custom_type_script = "uid://cujpcppvj015h"

[sub_resource type="Resource" id="Resource_6drw7"]
script = ExtResource("2_nh7wy")
img = ExtResource("5_3qfoq")
metadata/_custom_type_script = "uid://cujpcppvj015h"

[node name="menu_localizations" type="Node2D"]
script = ExtResource("1_tukkb")
background_data = Array[ExtResource("2_nh7wy")]([SubResource("Resource_qbd1p"), SubResource("Resource_cht4p"), SubResource("Resource_6drw7")])

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MenuUpgrades" type="PanelContainer" parent="CanvasLayer"]
offset_left = 21.0
offset_top = 122.0
offset_right = 1694.0
offset_bottom = 1046.0
scale = Vector2(0.995755, 0.913314)
metadata/_edit_use_anchors_ = true

[node name="MarginUpgrades" type="MarginContainer" parent="CanvasLayer/MenuUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="GridUpgrades" type="GridContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades"]
layout_mode = 2
columns = 2

[node name="MarginImg1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginImg1"]
layout_mode = 2
texture = ExtResource("4_u1bmi")
expand_mode = 3
stretch_mode = 5

[node name="MarginImg2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginImg2"]
layout_mode = 2
texture = ExtResource("5_3qfoq")
stretch_mode = 5

[node name="MaginText1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MaginText1"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Hire 500$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MaginText2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Label" type="Label" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MaginText2"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Hire 500$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginButton1" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button1" type="Button" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton1"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Hire"

[node name="MarginButton2" type="MarginContainer" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Button2" type="Button" parent="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton2"]
layout_mode = 2
theme_override_font_sizes/font_size = 43
text = "Hire"

[node name="Panel_close_button" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -292.0
offset_top = 130.0
offset_right = -242.0
offset_bottom = 180.0
grow_horizontal = 0

[node name="Button_close" type="Button" parent="CanvasLayer/Panel_close_button"]
layout_mode = 2
text = "x"

[connection signal="pressed" from="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton1/Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="CanvasLayer/MenuUpgrades/MarginUpgrades/GridUpgrades/MarginButton2/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel_close_button/Button_close" to="." method="_on_button_close_pressed"]
